--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/nao75Rei) [![Open in Codespaces](https://classroom.github.com/assets/launch-codespace-2972f46106e565e64193e422d61a12cf1da4916b45550586e14ef0a7c637dd04.svg)](https://classroom.github.com/open-in-codespaces?assignment_repo_id=18694966)",
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@vitest/coverage-v8": "^3.0.5",
@@ -23,5 +23,18 @@
     "typedoc": "^0.27.7",
     "typescript-eslint": "^8.24.0",
     "vitest": "^3.0.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ULL-ESIT-INF-DSI-2425/prct07-witcher-datamodel-groupa.git"
+  },
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/ULL-ESIT-INF-DSI-2425/prct07-witcher-datamodel-groupa/issues"
+  },
+  "homepage": "https://github.com/ULL-ESIT-INF-DSI-2425/prct07-witcher-datamodel-groupa#readme",
+  "dependencies": {
+    "inquirer": "^12.4.3",
+    "lowdb": "^7.0.1"
   }
 }
