--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "type": "git",
     "url": "git+https://github.com/ULL-ESIT-INF-DSI-2425/prct07-witcher-datamodel-groupa.git"
   },
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/ULL-ESIT-INF-DSI-2425/prct07-witcher-datamodel-groupa/issues"
   },
