--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   ],
     "compilerOptions": {
     "target": "ES2024",
-    "module": "commonjs",
+    "module": "ES6",
     "rootDir": "./src",
     "outDir": "./dist"
   }
