Cambiados los sort de la posada para los bienes, y menú completado para bienes -modificación de estos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "./dist"
   ],
     "compilerOptions": {
+    "moduleResolution": "Node",
     "target": "ES2024",
     "module": "ES6",
     "rootDir": "./src",
