--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "practica",
   "version": "1.0.0",
-  "main": "ejercicio-mod.js",
+  "main": "menu.js",
   "scripts": {
-    "start": "tsc-watch --onSuccess \"node dist/ejercicio-mod.js\"",
+    "start": "tsc-watch --onSuccess \"node dist/menu.js\"",
     "test": "vitest run",
     "coverage": "vitest run --coverage --coverage.include src/",
     "doc": "npx typedoc --entryPointStrategy Expand src",
@@ -15,6 +15,7 @@
   "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/nao75Rei) [![Open in Codespaces](https://classroom.github.com/assets/launch-codespace-2972f46106e565e64193e422d61a12cf1da4916b45550586e14ef0a7c637dd04.svg)](https://classroom.github.com/open-in-codespaces?assignment_repo_id=18694966)",
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/inquirer": "^9.0.7",
     "@vitest/coverage-v8": "^3.0.5",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
@@ -22,6 +23,7 @@
     "prettier": "^3.5.1",
     "tsc-watch": "^6.2.1",
     "typedoc": "^0.27.7",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
     "vitest": "^3.0.5"
   },
