Implementacion de la base de datos para añadir y eliminar elementos en funcion de su categoría a traves del menu

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
     "./dist"
   ],
     "compilerOptions": {
-    "moduleResolution": "Node",
+    "moduleResolution": "nodenext",
     "target": "ES2024",
-    "module": "ES6",
+    "module": "NodeNext",
     "rootDir": "./src",
     "outDir": "./dist"
   }
