Generados tests que faltaban

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "tsc-watch --onSuccess \"node dist/menu.js\"",
     "test": "vitest run",
-    "coverage": "vitest run --coverage --coverage.include src/",
+    "coverage": "vitest run --coverage --coverage.include src/ --coverage.exclude 'src/menu.ts'",
     "doc": "npx typedoc --entryPointStrategy Expand src",
     "prettier": "prettier --write ."
   },
@@ -15,6 +15,7 @@
   "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/nao75Rei) [![Open in Codespaces](https://classroom.github.com/assets/launch-codespace-2972f46106e565e64193e422d61a12cf1da4916b45550586e14ef0a7c637dd04.svg)](https://classroom.github.com/open-in-codespaces?assignment_repo_id=18694966)",
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@inquirer/testing": "^2.1.45",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^22.13.10",
     "@vitest/coverage-v8": "^3.0.5",
